v0.4.1/_sources/api/program_listing_file_src_bz_trellis.hpp.rst.txt

.. _program_listing_file_src_bz_trellis.hpp:

Program Listing for File bz_trellis.hpp
=======================================

|exhale_lsh| :ref:`Return to documentation for file <file_src_bz_trellis.hpp>` (``src/bz_trellis.hpp``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   /* Copyright 2019 Greg Tucker
   //
   // This file is part of brille.
   //
   // brille is free software: you can redistribute it and/or modify it under the
   // terms of the GNU Affero General Public License as published by the Free
   // Software Foundation, either version 3 of the License, or (at your option)
   // any later version.
   //
   // brille is distributed in the hope that it will be useful, but
   // WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
   // or FITNESS FOR A PARTICULAR PURPOSE.
   // See the GNU Affero General Public License for more details.
   //
   // You should have received a copy of the GNU Affero General Public License
   // along with brille. If not, see <https://www.gnu.org/licenses/>.            */
   
   typedef long slong;
   
   #ifndef _BZ_TRELLIS_
   #define _BZ_TRELLIS_
   
   #include "bz.hpp"
   #include "trellis.hpp"
   #include "phonon.hpp"
   
   template<class T, class R> class BrillouinZoneTrellis3: public PolyhedronTrellis<T,R>{
     BrillouinZone brillouinzone;
   public:
     template<typename... A>
     BrillouinZoneTrellis3(const BrillouinZone& bz, A... args):
       PolyhedronTrellis<T,R>(bz.get_ir_polyhedron(), args...),
       brillouinzone(bz) {}
     BrillouinZone get_brillouinzone(void) const {return this->brillouinzone;}
     const ArrayVector<double>& get_xyz(void) const {return this->vertices();}
     ArrayVector<double> get_inner_xyz(void) const {return this->cube_vertices(); }
     ArrayVector<double> get_outer_xyz(void) const {return this->poly_vertices(); }
     ArrayVector<double> get_hkl(void) const { return xyz_to_hkl(brillouinzone.get_lattice(),this->vertices());}
     ArrayVector<double> get_inner_hkl(void) const {return xyz_to_hkl(brillouinzone.get_lattice(),this->cube_vertices()); }
     ArrayVector<double> get_outer_hkl(void) const {return xyz_to_hkl(brillouinzone.get_lattice(),this->poly_vertices()); }
     std::vector<std::array<index_t,4>> get_vertices_per_tetrahedron(void) const {return this->vertices_per_tetrahedron();}
   
     template<typename S>
     std::tuple<ArrayVector<T>,ArrayVector<R>>
     interpolate_at(const LQVec<S>& x, const int nth, const bool no_move=false) const {
       LQVec<S> q(x.get_lattice(), x.size());
       LQVec<int> tau(x.get_lattice(), x.size());
       if (no_move){
         // Special mode for testing where no specified points are moved
         // IT IS IMPERITIVE THAT THE PROVIDED POINTS ARE *INSIDE* THE IRREDUCIBLE
         // POLYHEDRON otherwise the interpolation will fail or give garbage back.
         q = x;
       } else if (!brillouinzone.moveinto(x, q, tau, nth)){
         std::string msg;
         msg = "Moving all points into the first Brillouin zone failed.";
         throw std::runtime_error(msg);
       }
       if (nth < 2)
         return this->PolyhedronTrellis<T,R>::interpolate_at(q.get_xyz());
       return this->PolyhedronTrellis<T,R>::interpolate_at(q.get_xyz(), nth);
     }
   
     template<typename S>
     std::tuple<ArrayVector<T>,ArrayVector<R>>
     ir_interpolate_at(const LQVec<S>& x, const int nth, const bool no_move=false) const {
       verbose_update("BZTrellisQ::ir_interpoalte_at called with ",nth," threads");
       LQVec<S> ir_q(x.get_lattice(), x.size());
       LQVec<int> tau(x.get_lattice(), x.size());
       std::vector<size_t> rot(x.size(),0u), invrot(x.size(),0u);
       if (no_move){
         // Special mode for testing where no specified points are moved
         // IT IS IMPERITIVE THAT THE PROVIDED POINTS ARE *INSIDE* THE IRREDUCIBLE
         // POLYHEDRON otherwise the interpolation will fail or give garbage back.
         ir_q = x;
       } else if (!brillouinzone.ir_moveinto(x, ir_q, tau, rot, invrot, nth)){
         std::string msg;
         msg = "Moving all points into the irreducible Brillouin zone failed.";
         throw std::runtime_error(msg);
       }
       ArrayVector<T> vals;
       ArrayVector<R> vecs;
       std::tie(vals, vecs) = (nth>1)
           ? this->PolyhedronTrellis<T,R>::interpolate_at(ir_q.get_xyz(), nth)
           : this->PolyhedronTrellis<T,R>::interpolate_at(ir_q.get_xyz());
       // we always need the pointgroup operations to 'rotate'
       PointSymmetry psym = brillouinzone.get_pointgroup_symmetry();
       // and might need the Phonon Gamma table
       GammaTable pgt{GammaTable()};
       if (RotatesLike::Gamma == this->data().vectors().rotateslike()){
         pgt.construct(brillouinzone.get_lattice().star(), brillouinzone.add_time_reversal());
       }
       // actually perform the rotation to Q
       this->data().values() .rotate_in_place(vals, ir_q, pgt, psym, rot, invrot, nth);
       this->data().vectors().rotate_in_place(vecs, ir_q, pgt, psym, rot, invrot, nth);
       // we're done so bundle the output
       return std::make_tuple(vals, vecs);
     }
   };
   
   #endif // _BZ_TRELLIS_
